[package]
name = "wasm-builder-runner"
version = "1.0.5"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Runner for substrate-wasm-builder"
edition = "2018"
readme = "README.md"
repository = "https://github.com/tetcoin/wasm-builder-runner/"
license = "GPL-3.0"
homepage = "https://core.tetcoin.org"

[dependencies]
