[package]
name = "wasm-builder-runner"
version = "1.0.6"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Tetcore runner for wasm-builder"
edition = "2018"
readme = "README.md"
repository = "https://github.com/tetcoin/wasm-builder-runner/"
license = "GPL-3.0"
homepage = "https://core.tetcoin.org"
documentation = "https://docs.rs/wasm-builder-runner"

[dependencies]
